--- a/app/src/main/res/layout/quiz_list_item.xml
+++ b/app/src/main/res/layout/quiz_list_item.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">>
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
 <!--    이미지의 둥근 모서리 디자인을 적용시키기 위해 CardView사용-->
     <androidx.cardview.widget.CardView
@@ -34,45 +35,32 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/img_note_3" />
 
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="57dp"
-                android:layout_height="57dp"
-                app:layout_constraintBottom_toBottomOf="@+id/imgView_quiz"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.05"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.158"
-                app:srcCompat="@drawable/img_round_box" />
-
             <TextView
                 android:id="@+id/txt_quiz_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="30"
-                android:textColor="@color/black"
-                android:textSize="17dp"
+                android:layout_marginTop="16dp"
+                android:text="알고리즘의 퀴즈"
+                android:textColor="@color/white"
+                android:textSize="28dp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@+id/imageView"
-                app:layout_constraintEnd_toEndOf="@+id/imageView"
-                app:layout_constraintHorizontal_bias="0.475"
-                app:layout_constraintStart_toStartOf="@+id/imageView"
-                app:layout_constraintTop_toTopOf="@+id/imageView"
-                app:layout_constraintVertical_bias="0.27" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.087"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/txt_quiz_month"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
-                android:text="Aguest"
-                android:textColor="@color/black"
-                android:textSize="10dp"
-                app:layout_constraintBottom_toBottomOf="@+id/imageView"
-                app:layout_constraintEnd_toEndOf="@+id/imageView"
-                app:layout_constraintHorizontal_bias="0.461"
-                app:layout_constraintStart_toStartOf="@+id/imageView"
+                android:layout_marginStart="16dp"
+                android:text="2023.09.16 PM 13:09"
+                android:textColor="@color/white"
+                android:textSize="15dp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/imgView_quiz"
                 app:layout_constraintTop_toBottomOf="@+id/txt_quiz_date"
                 app:layout_constraintVertical_bias="0.0" />
 
@@ -80,4 +68,5 @@
 
 
     </androidx.cardview.widget.CardView>
+
 </LinearLayout>
