--- a/app/src/main/res/layout/all_quiz_list_item.xml
+++ b/app/src/main/res/layout/all_quiz_list_item.xml
@@ -38,7 +38,7 @@
         </androidx.cardview.widget.CardView>
 
         <TextView
-            android:id="@+id/txt_all_quiz_gen_month"
+            android:id="@+id/txt_all_quiz_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
@@ -62,7 +62,7 @@
             android:textSize="13dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/cardView2"
-            app:layout_constraintTop_toBottomOf="@+id/txt_all_quiz_gen_month"
+            app:layout_constraintTop_toBottomOf="@+id/txt_all_quiz_title"
             app:layout_constraintVertical_bias="1.0" />
 
         <ImageView
