--- a/app/src/main/res/layout/quiz_list_item.xml
+++ b/app/src/main/res/layout/quiz_list_item.xml
@@ -36,7 +36,7 @@
                 app:srcCompat="@drawable/img_note_3" />
 
             <TextView
-                android:id="@+id/txt_quiz_date"
+                android:id="@+id/txt_quiz_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -50,7 +50,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/txt_quiz_month"
+                android:id="@+id/txt_quiz_gen_data"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
@@ -61,7 +61,7 @@
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/imgView_quiz"
-                app:layout_constraintTop_toBottomOf="@+id/txt_quiz_date"
+                app:layout_constraintTop_toBottomOf="@+id/txt_quiz_title"
                 app:layout_constraintVertical_bias="0.0" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
