--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -7,6 +7,7 @@
         <!--        Django-->
         <domain includeSubdomains="true">15.165.186.162</domain>
         <domain includeSubdomains="true">13.125.210.68</domain>
+        <domain includeSubdomains="true">43.201.71.53</domain>
         <!--        localhost-->
         <domain includeSubdomains="true">127.0.0.1</domain>
 
