--- a/app/src/main/res/menu/note_viewer_menu.xml
+++ b/app/src/main/res/menu/note_viewer_menu.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/menu_item1"
-        android:title="퀴즈 생성"
+        android:id="@+id/create_quiz"
+        android:title="문제 생성"
         />
     <item
-        android:id="@+id/menu_item2"
+        android:id="@+id/update_title"
+        android:title="제목 수정"
+        />
+    <item
+        android:id="@+id/delete_note"
         android:title="노트 삭제"
         />
 </menu>
